--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -698,27 +698,63 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
   /* css for flyout */
 
   .flyout-main-container {
-   background-color: var(--background-color);
-   position: absolute;
-   left: 0;
-   right: 0;
-   top: 80px;
-   display: none;
-   padding: 3.125rem 0;
-   transition: top 0.65s ease;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--background-color);
+    position: absolute;
+    left: 0;
+    right: 0;
+    padding: 50px 0;
+    height: auto;
+    width: 100%;
+    opacity: 0;
+    transform: scaleY(0);
+    transition: all 0.3s cubic-bezier(.5,0,.5,1);
+    transform-origin: top;
+    transition-delay: .5s, 0s;
+    transition-duration: .25s, .15s;
+    transition-property: transform, opacity;
+  }
+  
+  .flyout-wrapper {
+    overflow: hidden;
+  }
+
+  .flyout-wrapper::before {
+    background-color: #0006;
+    content: "";
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    transition: opacity .05s cubic-bezier(0, .5, .5, 1);
+    width: 100%;
+    z-index: 0;
+  }
+
+  .showfly .flyout-wrapper {
+    max-height: calc(100vh - 69px);
+    height: calc(100vh - 85px);
+    overflow: visible;
+    top: 84px;
+    width: 100vw;
+    position: fixed;
+    left: 0;
+    right: 0;
+    transition: left .15s cubic-bezier(0, .5, .5, 1);
+  }
+
+  .showfly .flyout-wrapper::before {
+    opacity: 1;
   }
 
   .showfly .flyout-main-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* max-height: calc(100vh - 69px); */
-    overflow: hidden;
-    position: absolute;
-    top: 5.25rem;
-    width: 100vw;
-    left: -6rem;
-    transition: top 0.65s ease;
+    opacity: 1;
+    transform: scaleY(1);
+    transition-delay: 0s, 0s;
   }
 
 }
