--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -274,6 +274,102 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     color: var(--background-color);
     font-weight: 400;
   }
+
+  /* flyout css mobile code */ 
+  
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout > .menu-link-wrapper {
+    display: none;
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .flyout-wrapper {
+   display: flex;
+   border-top: 1px solid var(--light-bbb);
+   padding: .5rem 2.5rem;
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly {
+    position: static;
+    margin-top: 70px;
+    border-top: 1px solid var(--light-bbb);
+   }
+
+   header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly::after {
+    display: none;
+   }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .link-list-wrapper.vertical .link-list-title {
+    color: var(--light-text-color);
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: capitalize;
+    display: flex;
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .link-list-wrapper.vertical .link-list-title :hover{
+    color: var(--link-color);
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .link-list-wrapper.vertical .link-list-title::after {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        font-feature-settings: "liga";
+        content: "arrow_chevron_down";
+        direction: ltr;
+        display: block;
+        font-family: "bmw_next_icons";
+        font-size: 1.5rem;
+        font-style: normal;
+        font-weight: 400;
+        height: 1em;
+        line-height: 1;
+        outline: 1px solid transparent;
+        text-align: left;
+        text-rendering: optimizelegibility;
+        text-transform: none;
+        white-space: nowrap;
+        width: auto;
+        position: relative;
+        top: -7px;
+        left: 60px;
+   }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout .flyout-main-container .flyout-link-list {
+    padding: 0.75rem;
+    width: 100%;
+    margin: 0 auto;
+    font-size: .875rem;
+    font-weight: 700;
+  }
+ 
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .menu-flyout.block span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    font-weight: 400;
+    font-size: 1rem;
+    color: #262626;
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .menu-flyout.block span::before{
+    content: "arrow_chevron_left";
+    direction: ltr;
+    display: block;
+    font-family: "bmw_next_icons";
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 400;
+    height: 1em;
+    line-height: 1;
+    position: relative;
+    left: -5rem;
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly {
+    padding: 0;
+  }
+
+
 }
 
 /* IPAD */
@@ -500,6 +596,100 @@ header nav[aria-expanded="true"] .menu-flyout-wrapper::after {
     position: absolute;
     right: 50px;
     top: 12px;
+}
+
+/* flyout css ipad code */ 
+ 
+header nav[aria-expanded="true"] .nav-brand.mobile-flyout > .menu-link-wrapper {
+  display: none;
+}
+
+header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .flyout-wrapper {
+ display: flex;
+ border-top: 1px solid var(--light-bbb);
+ padding: .5rem 2.5rem;
+}
+
+header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly {
+  position: static;
+  margin-top: 70px;
+  border-top: 1px solid var(--light-bbb);
+ }
+
+ header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly::after {
+  display: none;
+ }
+
+header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .link-list-wrapper.vertical .link-list-title {
+  color: var(--light-text-color);
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: capitalize;
+  display: flex;
+}
+
+header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .link-list-wrapper.vertical .link-list-title :hover{
+  color: var(--link-color);
+}
+
+header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .link-list-wrapper.vertical .link-list-title::after {
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      font-feature-settings: "liga";
+      content: "arrow_chevron_down";
+      direction: ltr;
+      display: block;
+      font-family: "bmw_next_icons";
+      font-size: 1.5rem;
+      font-style: normal;
+      font-weight: 400;
+      height: 1em;
+      line-height: 1;
+      outline: 1px solid transparent;
+      text-align: left;
+      text-rendering: optimizelegibility;
+      text-transform: none;
+      white-space: nowrap;
+      width: auto;
+      position: relative;
+      top: -7px;
+      left: 60px;
+ }
+
+header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout .flyout-main-container .flyout-link-list {
+  padding: 0.75rem;
+  width: 100%;
+  margin: 0 auto;
+  font-size: .875rem;
+  font-weight: 700;
+}
+
+header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .menu-flyout.block span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #262626;
+}
+
+header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .menu-flyout.block span::before{
+  content: "arrow_chevron_left";
+  direction: ltr;
+  display: block;
+  font-family: "bmw_next_icons";
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 400;
+  height: 1em;
+  line-height: 1;
+  position: relative;
+  left: -5rem;
+}
+
+header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly {
+  padding: 0;
 }
   
 }
