--- a/blocks/section-flexible/flexible-width-section.css
+++ b/blocks/section-flexible/flexible-width-section.css
@@ -1,4 +1,4 @@
-main .flexible-width-section {
+.section .flexible-width-section {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -7,23 +7,26 @@ main .flexible-width-section {
   box-sizing: border-box;
 }
 
-.flexible-width-section .grid-10 {
-  flex: 0 0 83.33%; /* 10/12 = 83.33% */
+.section.grid-10 {
+  flex: 0 0 83.33%;
+  /* 10/12 = 83.33% */
   max-width: 83.33%;
 }
 
-.flexible-width-section .grid-8 {
-  flex: 0 0 66.66%; /* 8/12 = 66.66% */
+.section.grid-8 {
+  flex: 0 0 66.66%;
+  /* 8/12 = 66.66% */
   max-width: 66.66%;
 }
 
-.flexible-width-section .grid-6 {
-  flex: 0 0 50%; /* 6/12 = 50% */
+.section.grid-6 {
+  flex: 0 0 50%;
+  /* 6/12 = 50% */
   max-width: 50%;
 }
 
-@media (width >= 768px) and (width < 1280px) {
-  main .flexible-width-section {
+@media (width >=768px) and (width < 1280px) {
+  .section .flexible-width-section {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -31,25 +34,30 @@ main .flexible-width-section {
     max-width: 100%;
     box-sizing: border-box;
   }
-  
-  .flexible-width-section .grid-10 {
-    flex: 0 0 83.33%; /* 10/12 = 83.33% */
+
+  .section.grid-10 {
+    flex: 0 0 83.33%;
+    /* 10/12 = 83.33% */
     max-width: 83.33%;
   }
-  
-  .flexible-width-section .grid-8 {
-    flex: 0 0 66.66%; /* 8/12 = 66.66% */
+
+  .section.grid-8 {
+    flex: 0 0 66.66%;
+    /* 8/12 = 66.66% */
     max-width: 66.66%;
   }
-  
-  .flexible-width-section .grid-6 {
-    flex: 0 0 50%; /* 6/12 = 50% */
+
+  .section.grid-6 {
+    flex: 0 0 50%;
+    /* 6/12 = 50% */
     max-width: 50%;
   }
 }
 
-@media (width >= 360px) and (width < 768px) {
-  main .flexible-width-section {
+@media (width >=360px) and (width < 768px) {
+  .section.grid-10,
+  .section.grid-8,
+  .section.grid-6 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
