--- a/blocks/section-flexible/flexible-width-section.css
+++ b/blocks/section-flexible/flexible-width-section.css
@@ -8,20 +8,17 @@
 }
 
 .section.grid-10 {
-  flex: 0 0 83.33%;
-  /* 10/12 = 83.33% */
+  flex: 0 0 83.33%;  /* 10/12 = 83.33% */
   max-width: 83.33%;
 }
 
 .section.grid-8 {
-  flex: 0 0 66.66%;
-  /* 8/12 = 66.66% */
+  flex: 0 0 66.66%;  /* 8/12 = 66.66% */
   max-width: 66.66%;
 }
 
 .section.grid-6 {
-  flex: 0 0 50%;
-  /* 6/12 = 50% */
+  flex: 0 0 50%;  /* 6/12 = 50% */
   max-width: 50%;
 }
 
@@ -36,20 +33,17 @@
   }
 
   .section.grid-10 {
-    flex: 0 0 83.33%;
-    /* 10/12 = 83.33% */
+    flex: 0 0 83.33%;  /* 10/12 = 83.33% */
     max-width: 83.33%;
   }
 
   .section.grid-8 {
-    flex: 0 0 66.66%;
-    /* 8/12 = 66.66% */
+    flex: 0 0 66.66%;  /* 8/12 = 66.66% */
     max-width: 66.66%;
   }
 
   .section.grid-6 {
-    flex: 0 0 50%;
-    /* 6/12 = 50% */
+    flex: 0 0 50%;  /* 6/12 = 50% */
     max-width: 50%;
   }
 }
