header mobile flyout css changes

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -123,6 +123,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     top: 100px;
     padding: .55rem 3.5rem;
     font-weight: 700;
+    cursor: pointer;
   }
 
   header nav[aria-expanded="true"] .menu-link-wrapper a,  
@@ -284,13 +285,20 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
   header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .flyout-wrapper {
    display: flex;
    border-top: 1px solid var(--light-bbb);
-   padding: .5rem 2.5rem;
+   padding: 1rem 2.5rem;
+   position: sticky;
+    top: 0;
+    height: 425px;
+    overflow-y: scroll;
+    
   }
 
   header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly {
     position: static;
     margin-top: 70px;
     border-top: 1px solid var(--light-bbb);
+    padding: 0;
+    display: block;
    }
 
    header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly::after {
@@ -303,6 +311,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     font-weight: 700;
     text-transform: capitalize;
     display: flex;
+    cursor: pointer;
   }
 
   header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .link-list-wrapper.vertical .link-list-title :hover{
@@ -310,28 +319,35 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
   }
 
   header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .link-list-wrapper.vertical .link-list-title::after {
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        font-feature-settings: "liga";
-        content: "arrow_chevron_down";
-        direction: ltr;
-        display: block;
-        font-family: "bmw_next_icons";
-        font-size: 1.5rem;
-        font-style: normal;
-        font-weight: 400;
-        height: 1em;
-        line-height: 1;
-        outline: 1px solid transparent;
-        text-align: left;
-        text-rendering: optimizelegibility;
-        text-transform: none;
-        white-space: nowrap;
-        width: auto;
-        position: relative;
-        top: -7px;
-        left: 60px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-feature-settings: "liga";
+    content: "arrow_chevron_down";
+    direction: ltr;
+    display: block;
+    font-family: "bmw_next_icons", arial, helvetica, roboto, sans-serif;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    height: 1em;
+    line-height: 1;
+    transform: translate(25%, -50%);
+    transition: transform .5s ease-in-out;
+    outline: 1px solid transparent;
+    text-align: left;
+    text-rendering: optimizelegibility;
+    text-transform: none;
+    white-space: nowrap;
+    width: auto;
+    position: absolute;
+    top: 1.2rem;
+    right: 1rem;
    }
+
+   header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper .flyout-main-container {   
+    width: 100%;
+    position: relative;
+  }
 
   header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout .flyout-main-container .flyout-link-list {
     padding: 0.75rem;
@@ -339,6 +355,17 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     margin: 0 auto;
     font-size: .875rem;
     font-weight: 700;
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout .flyout-main-container .flyout-link-list .link-list .link-list-detail {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height .25s ease;
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .flyout-link-list .link-list .link-list-title.expand::after{
+    transform: translate(25%, -50%) rotate(-180deg);
+    color: var(--light-text-color);
   }
  
   header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly .menu-flyout.block span {
@@ -355,18 +382,34 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     content: "arrow_chevron_left";
     direction: ltr;
     display: block;
-    font-family: "bmw_next_icons";
+    font-family: "bmw_next_icons", arial, helvetica, roboto, sans-serif;
     font-size: 1.25rem;
     font-style: normal;
     font-weight: 400;
     height: 1em;
     line-height: 1;
-    position: relative;
-    left: -5rem;
+    position: absolute;
+    left: 1rem;
   }
 
-  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly {
-    padding: 0;
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper .menu-teaser-image p {
+    width: 100%;
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper .menu-teaser-image p img {
+    width: 100%;
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper .menu-flyout .flyout-main-container .flyout-menu-teaser {
+    width: 100%;
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper {
+    display: none;
+  }
+
+  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper .copy-text{
+   margin-bottom: 1rem;
   }
 
 
@@ -614,6 +657,7 @@ header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.s
   position: static;
   margin-top: 70px;
   border-top: 1px solid var(--light-bbb);
+  padding: 0;
  }
 
  header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly::after {
@@ -639,7 +683,7 @@ header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.s
       content: "arrow_chevron_down";
       direction: ltr;
       display: block;
-      font-family: "bmw_next_icons";
+      font-family: var(--icon-font-family);
       font-size: 1.5rem;
       font-style: normal;
       font-weight: 400;
@@ -678,7 +722,7 @@ header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.s
   content: "arrow_chevron_left";
   direction: ltr;
   display: block;
-  font-family: "bmw_next_icons";
+  font-family: var(--icon-font-family);
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 400;
@@ -686,10 +730,6 @@ header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.s
   line-height: 1;
   position: relative;
   left: -5rem;
-}
-
-header nav[aria-expanded="true"] .nav-brand.mobile-flyout .menu-flyout-wrapper.showfly {
-  padding: 0;
 }
   
 }
