--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,7 @@
   --light-grey: #f6f6f6;
   --light-bbb: #bbb;  
   --fixed-font-family: bmwtypenextweb,arial,helvetica,roboto,sans-serif;
+  --icon-font-family: "bmw_next_icons", arial,helvetica,roboto,sans-serif;
 
   /* base font size */
   --base-font-size: 16px;
