change css to grid

--- a/blocks/flexible-width-section/flexible-width-section.css
+++ b/blocks/flexible-width-section/flexible-width-section.css
@@ -1,62 +1,74 @@
 .section.flexible-width-section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0 auto;
-  max-width: 100%;
-  box-sizing: border-box;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-gap: 0;
+  grid-template-areas: "leftEmpty content rightEmpty";
 }
 
-.section.flexible-width-section.grid-10 {
-  flex: 0 0 83.33%;  /* 10/12 = 83.33% */
-  max-width: 83.33%;
+.section.flexible-width-section > div {
+  grid-area: content;
 }
-
 .section.flexible-width-section.grid-8 {
-  flex: 0 0 66.66%;  /* 8/12 = 66.66% */
-  max-width: 66.66%;
+ /* 8/12 = 66.66% */
+  grid-template-columns: 1fr 4fr 1fr;
 }
 
 .section.flexible-width-section.grid-6 {
-  flex: 0 0 50%;  /* 6/12 = 50% */
-  max-width: 50%;
+ /* 6/12 = 50% */
+  grid-template-columns: 1fr 2fr 1fr;
+}
+
+.section.flexible-width-section.grid-10 {
+  /* 10/12 = 83.33% */
+  grid-template-columns: 1fr 10fr 1fr;
+}
+
+.section.center.flexible-width-section {
+  text-align: center;
+  justify-content: center;
+}
+
+.section.left.flexible-width-section {
+  text-align: left;
+  justify-content: left;
+}
+
+.section.right.flexible-width-section {
+  text-align: right;
+  justify-content: right;
 }
 
 @media (width >=768px) and (width < 1280px) {
   .section.flexible-width-section {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0 auto;
-    max-width: 100%;
-    box-sizing: border-box;
-  }
-
-  .section.flexible-width-section.grid-10 {
-    flex: 0 0 83.33%;  /* 10/12 = 83.33% */
-    max-width: 83.33%;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-gap: 0;
+    grid-template-areas: "leftEmpty content rightEmpty";
   }
 
   .section.flexible-width-section.grid-8 {
-    flex: 0 0 66.66%;  /* 8/12 = 66.66% */
-    max-width: 66.66%;
-  }
-
-  .section.flexible-width-section.grid-6 {
-    flex: 0 0 50%;  /* 6/12 = 50% */
-    max-width: 50%;
-  }
+    /* 8/12 = 66.66% */
+     grid-template-columns: 1fr 4fr 1fr;
+   }
+   
+   .section.flexible-width-section.grid-6 {
+    /* 6/12 = 50% */
+     grid-template-columns: 1fr 2fr 1fr;
+   }
+   
+   .section.flexible-width-section.grid-10 {
+     /* 10/12 = 83.33% */
+     grid-template-columns: 1fr 10fr 1fr;
+   }
 }
 
 @media (width >=360px) and (width < 768px) {
   .section.flexible-width-section.grid-10,
   .section.flexible-width-section.grid-8,
   .section.flexible-width-section.grid-6 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0 auto;
-    width: 100%;
-    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-gap: 0;
   }
 }
